--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,15 +35,27 @@ jobs:
       # Package for Retail
       - name: Package Retail
         uses: BigWigsMods/packager@master
+        
+      # Rename Classic Toc
+      - name: Rename TBC tocc
+        run: |
+          rm bdUI.toc
+          mv bdUI-classic.toc bdUI.toc
       
       # Package for Classic
       - name: Package Classic
         uses: BigWigsMods/packager@master
         with:
-          args: -g classic -m .pkgmeta-classic
+          args: -g classic
+          
+      # Rename TBC Toc
+      - name: Rename TBC tocc
+        run: |
+          rm bdUI.toc
+          mv bdUI-bcc.toc bdUI.toc
         
-     # Package for TBC
+      # Package for TBC
       - name: Package BCC
         uses: BigWigsMods/packager@master
         with:
-          args: -g bc -m .pkgmeta-bcc
+          args: -g bc
