--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,4 +64,4 @@ jobs:
       - name: Package BCC
         uses: BigWigsMods/packager@master
         with:
-          args: -g bc
+          args: -g bcc
