--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ name: Package bdUI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   release:
+    types: [published]
     branches:
       - master
 
