--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,3 +60,16 @@ jobs:
         uses: BigWigsMods/packager@master
         with:
           args: -g bcc
+
+      # Rename WOTLKC Toc
+        - name: Rename WOTLKC tocc
+          run: |
+            rm bdUI.toc
+            mv bdUI-wotlkc.toc bdUI.toc
+        
+      # Package for WOTLKC
+      - name: Package WOTLKC
+        uses: BigWigsMods/packager@master
+        with:
+          args: -g bcc
+
