--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,39 +37,33 @@ jobs:
       - name: Package Retail
         uses: BigWigsMods/packager@master
         
-      # Rename Classic Toc
-      - name: Rename Classic tocc
+      # Package for Classic
+      - name: Rename Classic toc
         run: |
           rm bdUI.toc
           mv bdUI-classic.toc bdUI.toc
-      
-      # Package for Classic
       - name: Package Classic
         uses: BigWigsMods/packager@master
         with:
           args: -g classic
           
-      # Rename TBC Toc
-      - name: Rename TBC tocc
+      # Package for TBC
+      - name: Rename TBC toc
         run: |
           rm bdUI.toc
           mv bdUI-bcc.toc bdUI.toc
-        
-      # Package for TBC
       - name: Package BCC
         uses: BigWigsMods/packager@master
         with:
           args: -g bcc
 
-      # Rename WOTLKC Toc
-        - name: Rename WOTLKC tocc
+      # Package for WOTLKC
+        - name: Rename WOTLKC toc
           run: |
             rm bdUI.toc
             mv bdUI-wotlkc.toc bdUI.toc
-        
-      # Package for WOTLKC
       - name: Package WOTLKC
         uses: BigWigsMods/packager@master
         with:
-          args: -g bcc
+          args: -g wotlkc
 
