--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -343,6 +343,15 @@
 		"utf8": "disable"
 	},
 	"Lua.workspace.library": [
-		"~\\.vscode\\extensions\\ketho.wow-api-0.17.9\\Annotations"
-	]
+		"c:\\Users\\Bloob\\.cursor\\extensions\\ketho.wow-api-0.20.8\\Annotations\\Core"
+	],
+	"Lua.format.enable": true,
+	"Lua.format.defaultConfig": {
+		"indent_type": "Tab",
+		"indent_width": 4,
+		"column_width": 999,
+		"format_comments": false,
+		"collapse_simple_statement": "Never",
+		"column_alignment": false
+	}
 }
